--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "My Class Site"
-description: "A simple Jekyll class site with schedule popups."
+title: "CSE194: Hacker History"
+description: "The Spring 2025 session of CSE194: Hacker History"
 markdown: kramdown
 future: true
