Revert "Fix profiles lol"
This reverts commit 97dc4d2e9941e1e3760ebc1b8ba355a1a94955fb.

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ markdown: kramdown
 future: true
 
 collections:
-  profiles:
+  prophiles:
     output: true
-    permalink: /profiles/:title/
+    permalink: /prophiles/:title/
